# s2-geometry-library

./: .gitignore  .travis.yml  README.md  travis.sh
geometry/: CMakeLists.txt
geometry/python/: CMakeLists.txt  test.py
geometry/strings/: split.cc
geometry/tests/: CMakeLists.txt
